--- a/index.html
+++ b/index.html
@@ -16,6 +16,45 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="icon" href="afbeeldingen/favicon.jpg">
     <title>EternalKingdom</title>
+    <style>
+      h1 {
+        padding: 5% 25%;
+        text-align: left;
+      }
+      .p-2 {
+        width: 50px;
+        height: 50px;
+      }
+      .p-2:hover {
+        opacity: 20%;
+      }
+      .space-x-6 img {
+        width: 30%;
+        height: auto;
+      }
+      .p-6 p a {
+        color: orange;
+      }
+      @media screen and (max-width: 767px) {
+        .p-12 h1 {
+          padding: 0px;
+        }
+        iframe {
+          width: 100%;
+          height: 300px;
+        }
+        .p-4 {
+          font-size: 80%;
+        }
+        .rounded-full {
+          font-size: 60%;
+        }
+        .partner img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    </style>
   </head>
   <body>
     <div class="min-h-screen text-white bg-zinc-900">
@@ -59,7 +98,7 @@
           <a href="#get-to-know" class="bg-orange-500 text-white px-6 py-3 rounded-full">Onze digitale content</a>
         </div>
         <div class="vid-container">
-          <iframe class="vid" width="700" height="500" src="https://www.youtube.com/embed/yx-a_GTosyg?si=s6lIXN7HJBqS5rD0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe class="vid" width="700" height="500" src="https://www.youtube.com/embed/UoDzfwYTaUc?si=XcfqI1xen-K310mF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </section>
       <section class="p-12">
