--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             </a>
           </button>
           <button class="p-2">
-            <img src="afbeeldingen/book.png" title="EternalKingdom Roleplay" alt="EternalKingdom Roleplay">
+            <a href="#">
+              <img src="afbeeldingen/book.png" title="EternalKingdom Roleplay" alt="EternalKingdom Roleplay">
+            </a>
           </button>
         </nav>
       </header>
@@ -86,3 +88,4 @@
     </div>
   </body>
 </html>
+
